# PersonalDecorScreen

./: README.md
libraries/: lv_conf.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_MainScreen.c  ui_MainScreen.h  ui_SettingScreen.c  ui_SettingScreen.h  ui_SystemScreen.c  ui_SystemScreen.h  ui_WeatherScreen.c  ui_WeatherScreen.h  ui_WifiPasswordScreen.c  ui_WifiPasswordScreen.h  ui_WifiSelectScreen.c  ui_WifiSelectScreen.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_labeltime.c  ui_comp_labeltime.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_correct128px_png.c  ui_img_icon_01d_72p_png.c  ui_img_icon_01n_72p_png.c  ui_img_icon_02d_72p_png.c  ui_img_icon_02n_72p_png.c  ui_img_icon_03d_03n_72p_png.c  ui_img_icon_04d_04n_72p_png.c  ui_img_icon_09d_09n_72p_png.c  ui_img_icon_10d_72p_png.c  ui_img_icon_10n_72p_png.c  ui_img_icon_11d_11n_72p_png.c  ui_img_icon_13d_13n_72p_png.c  ui_img_icon_50d_50n_72p_png.c  ui_img_icon_humd_22p_png.c  ui_img_icon_location_11p_png.c  (+16 more)
main/: all_frames.h  main.ino
main/frames/: frame_00000.h  frame_00001.h  frame_00002.h  frame_00003.h  frame_00004.h  frame_00005.h  frame_00006.h  frame_00007.h  frame_00008.h  frame_00009.h  frame_00010.h  frame_00011.h  frame_00012.h  frame_00013.h  frame_00014.h  frame_00015.h  frame_00016.h  frame_00017.h  frame_00018.h  frame_00019.h  frame_00020.h  frame_00021.h  frame_00022.h  frame_00023.h  frame_00024.h  frame_00025.h  frame_00026.h  frame_00027.h  frame_00028.h  frame_00029.h  frame_00030.h  frame_00031.h  frame_00032.h  frame_00033.h  frame_00034.h  (+709 more)
