SET(SOURCES ui_comp_labeltime.c
    ui_comp.c
    ui_MainScreen.c
    ui_SettingScreen.c
    ui_WifiSelectScreen.c
    ui_WifiPasswordScreen.c
    ui_SystemScreen.c
    ui_WeatherScreen.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_settings48px_png.c
    ui_img_wifi48px_png.c
    ui_img_nowifi_14x10_png.c
    ui_img_wifi_14x8_png.c
    ui_img_shutdown48px_png.c
    ui_img_system48px_png.c
    ui_img_weather48px_png.c
    ui_img_correct128px_png.c
    ui_img_incorrect128px_png.c
    ui_img_icon_temp_22p_png.c
    ui_img_icon_max_11p_png.c
    ui_img_icon_min_11p_png.c
    ui_img_icon_humd_22p_png.c
    ui_img_icon_pressure_11p_png.c
    ui_img_icon_visibility_11p_png.c
    ui_img_icon_wind_11p_png.c
    ui_img_icon_location_11p_png.c
    ui_img_icon_10n_72p_png.c
    ui_img_icon_01d_72p_png.c
    ui_img_icon_50d_50n_72p_png.c
    ui_img_icon_11d_11n_72p_png.c
    ui_img_icon_13d_13n_72p_png.c
    ui_img_icon_10d_72p_png.c
    ui_img_icon_09d_09n_72p_png.c
    ui_img_icon_04d_04n_72p_png.c
    ui_img_icon_03d_03n_72p_png.c
    ui_img_icon_02n_72p_png.c
    ui_img_icon_02d_72p_png.c
    ui_img_icon_01n_72p_png.c)

add_library(ui ${SOURCES})
